[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Upgrades.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Version.tscn" type="PackedScene" id=2]
[ext_resource path="res://Images/ITEMS/Upgrade_parts.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Upgrades" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1368.0
margin_bottom = 768.0
color = Color( 0, 0, 0, 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 24.0
margin_right = 342.0
margin_bottom = 182.0
rect_scale = Vector2( 4, 4 )

[node name="Label" type="Label" parent="GridContainer"]
margin_left = 143.0
margin_right = 199.0
margin_bottom = 16.0
size_flags_horizontal = 6
text = "Upgrades"
align = 1
valign = 1

[node name="GridContainer2" type="GridContainer" parent="GridContainer"]
margin_top = 20.0
margin_right = 342.0
margin_bottom = 40.0
columns = 2

[node name="Reset" type="Button" parent="GridContainer/GridContainer2"]
margin_left = 53.0
margin_right = 169.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 0 )
focus_mode = 0
size_flags_horizontal = 10
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = " Reset upgrades "

[node name="GridContainer" type="GridContainer" parent="GridContainer/GridContainer2"]
margin_left = 242.0
margin_right = 273.0
margin_bottom = 20.0
size_flags_horizontal = 6
columns = 2

[node name="TextureRect" type="TextureRect" parent="GridContainer/GridContainer2/GridContainer"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="GridContainer/GridContainer2/GridContainer"]
margin_left = 24.0
margin_top = 2.0
margin_right = 31.0
margin_bottom = 18.0
size_flags_horizontal = 7
text = "0"

[node name="ScrollContainer" type="ScrollContainer" parent="GridContainer"]
margin_top = 44.0
margin_right = 342.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/ScrollContainer"]
margin_right = 342.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="GridContainer/ScrollContainer/VBoxContainer"]
margin_right = 342.0

[node name="Back" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 78.0
margin_bottom = 28.0
rect_min_size = Vector2( 70, 0 )
rect_scale = Vector2( 4, 4 )
focus_mode = 0
size_flags_horizontal = 6
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "Back"

[node name="Version" parent="." instance=ExtResource( 2 )]
position = Vector2( 8, 727 )

[connection signal="button_up" from="GridContainer/GridContainer2/Reset" to="." method="_on_Reset_button_up"]
[connection signal="button_up" from="Back" to="." method="_on_Back_button_up"]
